添加相关文件到播放列表

--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"VLC":"D:/scoop/apps/vlc/3.0.20/vlc.exe","Playing":"file:///D:/desktop/2.mp4","Position":50,"BeginSkip":0,"EndSkip":0}
+{"VLC":"D:/scoop/apps/vlc/3.0.20/vlc.exe","Playing":"","Position":0,"BeginSkip":0,"EndSkip":0}
